apps/cli/test/expected/list-with-broken.out.txt
{
	"fixture": "broken",
	"command": "siren list"
}
---

---
error: unexpected token '!!!'; expected 'task' or 'milestone'
 --> siren/broken.siren:1:1
  |
1 | !!! broken
  | ^^^
note: skipping siren/broken.siren due to syntax errors
